convert actions secrets to vars

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,16 +29,16 @@ jobs:
         pip install -r requirements-dev.txt
     - name: Test with pytest
       env:
-        AZURE_OPENAI_ENDPOINT: ${{ secrets.AZUREOPENAIENDPOINT }}
-        AZURE_OPENAI_MODEL: ${{ secrets.AZUREOPENAIMODEL }}
-        AZURE_OPENAI_EMBEDDING_NAME: ${{ secrets.AZUREOPENAIEMBEDDINGNAME }}
-        AZURE_COSMOSDB_ACCOUNT: ${{ secrets.AZURECOSMOSDBACCOUNT }}
-        AZURE_COSMOSDB_DATABASE: ${{ secrets.AZURECOSMOSDBDATABASE }}
-        AZURE_COSMOSDB_CONVERSATIONS_CONTAINER: ${{ secrets.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
+        AZURE_OPENAI_ENDPOINT: ${{ vars.AZUREOPENAIENDPOINT }}
+        AZURE_OPENAI_MODEL: ${{ vars.AZUREOPENAIMODEL }}
+        AZURE_OPENAI_EMBEDDING_NAME: ${{ vars.AZUREOPENAIEMBEDDINGNAME }}
+        AZURE_COSMOSDB_ACCOUNT: ${{ vars.AZURECOSMOSDBACCOUNT }}
+        AZURE_COSMOSDB_DATABASE: ${{ vars.AZURECOSMOSDBDATABASE }}
+        AZURE_COSMOSDB_CONVERSATIONS_CONTAINER: ${{ vars.AZURECOSMOSDBCONVERSATIONSCONTAINER }}
         AZURE_COSMOSDB_ACCOUNT_KEY: ${{ secrets.AZURECOSMOSDBACCOUNTKEY }}
-        AZURE_SEARCH_SERVICE: ${{ secrets.AZURESEARCHSERVICE }}
-        AZURE_SEARCH_INDEX: ${{ secrets.AZURESEARCHINDEX }}
-        AZURE_SEARCH_QUERY: ${{ secrets.AZURESEARCHQUERY }}
+        AZURE_SEARCH_SERVICE: ${{ vars.AZURESEARCHSERVICE }}
+        AZURE_SEARCH_INDEX: ${{ vars.AZURESEARCHINDEX }}
+        AZURE_SEARCH_QUERY: ${{ vars.AZURESEARCHQUERY }}
       run: |
         export PYTHONPATH=$(pwd)
         coverage run -m pytest -v --show-capture=stdout
