--- a/.env.sample
+++ b/.env.sample
@@ -118,3 +118,6 @@ PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=query
 PROMPTFLOW_RESPONSE_FIELD_NAME=reply
 PROMPTFLOW_CITATIONS_FIELD_NAME=documents
+
+# Application Insights
+APPLICATIONINSIGHTS_CONNECTION_STRING=
