--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,13 @@ name: Build Frontend
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - 'frontend/**'
+  workflow_dispatch:
     
 
 jobs:
