--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,8 +6,14 @@ name: Python application
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - '**/*.py'
+      - 'requirements*.txt'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '**/*.py'
+      - 'requirements*.txt'
   workflow_dispatch:
     
 permissions:
